Fix TOC nested list spacing

--- a/ext_css/jira.css
+++ b/ext_css/jira.css
@@ -288,7 +288,7 @@ div.toc-macro ul li.toc-empty-item {
 div.toc-macro ul ul {
   font-weight: 400;
   font-size: .875em;
-  padding-top: 0;
+  padding-top: 8px;
   padding-left: 2em;
 }
 
